# autonomous-qa-agents

./: .env  generated_test_cases.xlsx  main.py  pyproject.toml  requirements.txt  streamlit_app.py
agents/: reader.py  test_case_formatter.py
